--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-snowpack-app"
+    <meta name="description" content="Ambient music" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
     />
-    <title>Snowpack App</title>
+    <title>Noizer One</title>
   </head>
   <body>
-    <div id="detrimax-widget"></div>
+    <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
     <!--
